--- a/MeetupApp-SPA/src/app/nav/nav.component.html
+++ b/MeetupApp-SPA/src/app/nav/nav.component.html
@@ -1,33 +1,46 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Meetup</a>
+<nav  class="navbar navbar-expand-md navbar-dark bg-dark">
+  <div class="div container">
+  <a class="navbar-brand" [routerLink]="['/home']">Meetup App</a>
 
 
 
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Start a new group</a>
+  <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link"[routerLink]="['/']"   >Start a new group</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Explore</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" [routerLink]="['/events']">Explore</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Messages</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" (click)="loggedOut()" href="#">Logout</a>
+    <li class="nav-item" routerLinkActive="active">
+      <a class="nav-link" [routerLink]="['/messages']">Messages</a>
     </li>
   </ul>
 
+  <div *ngIf="loggedIn()" class="dropdown" dropdown>
 
-  <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light " >
-      Welcome user
+
+
+    <a class="dropdown-toggle text-light " dropdownToggle>
+      Welcome {{authService.decodedToken?.unique_name | titlecase}}
     </a>
-    <div class="dropdown-menu" >
-      <a class="dropdown-item" href="#" class="fa fa-user">Edit profile</a>
+
+
+  <div class="dropdown-menu mt-3" *dropdownMenu>
+      <a class="dropdown-item"
+      class="fa fa-user">
+      Edit profile
+    </a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Logout</a>
+      <a class="dropdown-item"
+      (click)="loggedOut()" >
+      <i class="fa fa-sign-out"></i>
+      Logout
+    </a>
     </div>
+
+
+
+
   </div>
 
   <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
@@ -48,4 +61,5 @@
     [disabled]="!loginForm.valid"
     >Login</button>
   </form>
+</div>
 </nav>
