--- a/MeetupApp-SPA/src/app/nav/nav.component.html
+++ b/MeetupApp-SPA/src/app/nav/nav.component.html
@@ -1,65 +1,61 @@
-<nav  class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <div class="div container">
-  <a class="navbar-brand" [routerLink]="['/home']">Meetup App</a>
+    <a class="navbar-brand" [routerLink]="['/home']">Meetup App</a>
 
 
 
-  <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link"[routerLink]="['/']"   >Start a new group</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/events']">Explore</a>
-    </li>
-    <li class="nav-item" routerLinkActive="active">
-      <a class="nav-link" [routerLink]="['/messages']">Messages</a>
-    </li>
-  </ul>
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/']">Start a new group</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/events']">Explore</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/people']">People</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/messages']">Messages</a>
+      </li>
+    </ul>
 
-  <div *ngIf="loggedIn()" class="dropdown" dropdown>
-
-
-
-    <a class="dropdown-toggle text-light " dropdownToggle>
-      Welcome {{authService.decodedToken?.unique_name | titlecase}}
-    </a>
+    <div *ngIf="loggedIn()" class="dropdown" dropdown>
 
 
-  <div class="dropdown-menu mt-3" *dropdownMenu>
-      <a class="dropdown-item"
-      class="fa fa-user">
-      Edit profile
-    </a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item"
-      (click)="loggedOut()" >
-      <i class="fa fa-sign-out"></i>
-      Logout
-    </a>
+
+      <a class="dropdown-toggle text-light " dropdownToggle>
+        Welcome {{authService.decodedToken?.unique_name | titlecase}}
+      </a>
+
+
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item">
+          <i class="fa fa-user"></i>
+          Edit profile
+        </a>
+
+        <div class="dropdown-divider"></div>
+
+        <a class="dropdown-item" (click)="loggedOut()">
+          <i class="fa fa-sign-out"></i>
+          Logout
+        </a>
+      </div>
+
+
+
+
     </div>
 
+    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
 
+      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" required
+        [(ngModel)]="model.username">
 
+      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" required
+        [(ngModel)]="model.password">
 
+      <button class="btn btn-success my-2 my-sm-0" type="submit" [disabled]="!loginForm.valid">Login</button>
+    </form>
   </div>
-
-  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-
-    <input class="form-control mr-sm-2"
-    type="text" name="username"
-    placeholder="Username" required
-    [(ngModel)]="model.username">
-
-    <input class="form-control mr-sm-2"
-    type="password" name="password"
-    placeholder="Password" required
-    [(ngModel)]="model.password"
-    >
-
-    <button class="btn btn-success my-2 my-sm-0"
-    type="submit"
-    [disabled]="!loginForm.valid"
-    >Login</button>
-  </form>
-</div>
 </nav>
