Added user edit profile

--- a/MeetupApp-SPA/src/app/nav/nav.component.html
+++ b/MeetupApp-SPA/src/app/nav/nav.component.html
@@ -29,7 +29,9 @@
 
 
       <div class="dropdown-menu mt-3" *dropdownMenu>
-        <a class="dropdown-item">
+        <a class="dropdown-item"
+        [routerLink]="['/people/edit']">
+
           <i class="fa fa-user"></i>
           Edit profile
         </a>
@@ -41,7 +43,6 @@
           Logout
         </a>
       </div>
-
 
 
 
